<resources>
    <string name="app_name">AGFS CAFM</string>
    <string name="app_name_emco">EMCO CAFM</string>
    <string name="title_home">Home</string>
    <string name="title_reactive_maintenance">Reactive Maintenance</string>
    <string name="title_preventive_maintenace">Preventive Maintenance</string>
    <string name="title_inspection_module">Inspection Module</string>
    <string name="title_profile">Profile</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_loading">Loading...</string>
    <string name="lbl_image_uploading">Uploading image please wait...</string>
    <string name="lbl_no_image_uploading">Updating no image please wait...</string>
    <string name="lbl_other">Others</string>
    <string name="lbl_no_barcode_found">No barcode found</string>
    <string name="lbl_no_barcode_captured">No barcode captured, intent data is null</string>
    <string name="lbl_alert_network_not_available">Network not available. Please enable mobile data or wifi</string>
    <string name="lbl_alert_incorrect_username_pwd">Incorrect Username or Password</string>
    <string name="lbl_alert_rc_not_available">Receive Complaint details not available</string>
    <string name="lbl_okay">Okay</string>
    <string name="lbl_choose">Choose</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="action_home">Home</string>
    <string name="action_logout">Logout</string>
    <string name="msg_no_data_found_in_local_db">No Data found. Please check your internet connection</string>
    <string name="lbl_log_complaint">Log Complaints</string>
    <string name="lbl_receive_complaints">Receive Complaints</string>
    <string name="lbl_view_complaint_status">View Complaint Status</string>
    <string name="lbl_pending_client_signature">Pending Client Signature</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_username_new">Username/Email</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_reg">Registration for new user</string>
    <string name="msg_enter_username">Enter your username</string>
    <string name="msg_enter_password">Enter your password</string>
    <string name="msg_server_url">Enter server URL</string>
    <string name="msg_email_valid">Please enter Valid email</string>
    <string name="msg_email_valid_url">Please enter Valid URL</string>
    <string name="msg_no_valid">Please enter Valid number</string>
    <string name="msg_property_valid">Please enter Property name</string>
    <string name="msg_building_valid">Please enter building name</string>
    <string name="msg_location_valid">Please enter location (floor/flat ,etc)</string>
    <string name="msg_firstname_valid">Please enter your first name</string>
    <string name="msg_lastname_valid">Please enter your last name</string>
    <string name="msg_username_empty">Please enter your username</string>
    <string name="msg_password_empty">Please enter your password</string>
    <string name="msg_oldpassword_empty">Please enter your oldpassword</string>
    <string name="msg_newpassword_empty">Please enter your newpassword</string>
    <string name="msg_confinewpassword_empty">Please enter your confirmpassword</string>
    <string name="lbl_region">Region</string>
    <string name="lbl_job_type">Job Type</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_respond">Respond</string>
    <string name="lbl_building">Building</string>
    <string name="lbl_model">Model</string>
    <string name="lbl_make">Make</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_bar_code">Asset/Location Barcode</string>
    <string name="lbl_client_bar_code">Client Barcode</string>
    <string name="lbl_asset_code">Asset/Location Code</string>
    <string name="lbl_main_eqpt">Main Equipment</string>
    <string name="lbl_remarks">Remarks</string>
    <string name="lbl_parameter">Parameter</string>
    <string name="lbl_select_remarks">Select Remarks</string>
    <string name="lbl_select_pending">Select pending reasons</string>
    <string name="lbl_please_select_remarks">Please select remarks</string>
    <string name="lbl_please_select_complaint_ref">Please enter complaint ref no</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_select">select</string>
    <string name="msg_empty">This field required</string>
    <string-array name="string_array_remarks">
        <item>Responded</item>
        <item>Access not Available</item>
        <item>Access not reachable</item>
        <item>Appointment Required</item>
        <item>Barcode label damaged/removed</item>
        <item>Others</item>
    </string-array>
    <string name="lbl_select_site">Select Site</string>
    <string name="lbl_contract_title">Contract Title</string>
    <string name="lbl_contract_no">Contract No</string>
    <string name="lbl_select_category">Select Category</string>
    <string name="lbl_select_zone">Select Zone</string>
    <string name="lbl_select_job_no">Select Job No</string>
    <string name="lbl_select_priority">Select Priority</string>
    <string name="lbl_select_property">Select Property</string>
    <string name="lbl_select_jobno">Select Contract Title</string>
    <string name="lbl_select_jobno_new">Select Job No</string>
    <string name="msg_thankyou_note1">Thank you for registering your complaint.\nYour Complaint Reference Number -</string>
    <string name="msg_contact_us">\nFor any further assistance, please call us on 04 - 521 7900 or email us at customer.care@agfacilities.com</string>
    <string name="lbl_priority">Priority</string>
    <string name="lbl_complaint_details">Complaint Details</string>
    <string name="lbl_site">Site</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_zone">Zone / Area</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_location_details">Location Details</string>
    <string name="lbl_property_details">Property Details</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_signup">Sign up</string>
    <string name="msg_enter_location">Enter your location </string>
    <string name="msg_enter_complaint">Enter your complaint </string>
    <string name="msg_enter_complaint_empty">Please enter the complaint</string>
    <string name="msg_enter_building_name">(Building Name Etc)</string>
    <string name="msg_building_name_empty">Please enter Building Name Etc</string>
    <string name="lbl_flat_office_etc">(Flat / Office No. Etc)</string>
    <string name="lbl_forget_password">Forgot Password</string>
    <string name="msg_forget_password">Forgot Password?</string>
    <string name="lbl_send_email">Send E-mail</string>
    <string name="lbl_barcode_scan">Scan the Location / Asset Code</string>
    <string name="lbl_equipment_barcode_scan">Scan the equipment barcode</string>
    <string name="lbl_done">Choose</string>
    <string name="lbl_complaint">Complaint</string>
    <string name="lbl_defectsfound">Defects Found</string>
    <string name="lbl_defectsfound_comments">Enter Comments</string>
    <string name="lbl_ppe">PPE</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_material_reqd">Material Required</string>
    <string name="lbl_material_used">Material Used</string>
    <string name="lbl_select_reason">Select Reason</string>
    <string name="lbl_reason">Reason</string>
    <string name="lbl_select_workstatus">Select Work Status</string>
    <string name="lbl_workstatus">Work Status</string>
    <string name="lbl_workdone">Work Done</string>
    <string name="msg_other_pending_work">Enter Other Work Pending</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_na">N/A</string>
    <string name="lbl_feedback_required">Technician  Feedback Required</string>
    <string name="lbl_remarks_required">Remarks Required</string>
    <string name="lbl_checkedby">Checked By</string>
    <string name="lbl_select_checkedby">Select Checked by</string>
    <string name="lbl_attendedby">Attended By</string>
    <string name="lbl_select_attendedby">Select Attended by</string>
    <string name="lbl_select_status">Select Status</string>
    <string name="lbl_technfeedback">Technician  Feedback</string>
    <string name="lbl_actul_startdate">Actual Start Date</string>
    <string name="lbl_actul_enddate">Actual End Date</string>
    <string name="lbl_supervisorremarks">Supervisor/Engineer  Remarks</string>
    <string name="lbl_retry">Retry</string>
    <string name="msg_receivecomplaint_empty">No Complaints have been assigned</string>
    <string name="msg_material_empty">Please enter search keyword to fetch data</string>
    <string name="msg_ppelist_empty">No Complain Recieved For Employee</string>
    <string name="lbl_view_profile">View Profile</string>
    <string name="lbl_firstname">First Name</string>
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_phone_no">Phone No</string>
    <string name="lbl_mobile_no">Mobile No</string>
    <string name="lbl_user_type">User Type</string>
    <string name="lbl_zone_area">Zone/Area</string>
    <string name="lbl_2017_ags">2017 "\@" AGFS V1.0</string>
    <string name="lbl_version">Version 1.0</string>
    <string name="msg_enter_complaint_ref_no">Enter complaint reference number </string>
    <string name="lbl_search">Search</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_from_date">From Date</string>
    <string name="lbl_select_from_date">Select From Date</string>
    <string name="lbl_select_to_date">Select To Date</string>
    <string name="lbl_to_date">To Date</string>
    <string name="lbl_building_property_detail">Building / Property detail</string>
    <string name="lbl_select_building_property_detail">Select building / Property detail</string>
    <string name="lbl_select_building">Select building</string>
    <string name="lbl_complaint_no">Complaint No.</string>
    <string name="lbl_multi_search_complaint">Multiple Search Complaint</string>
    <string name="lbl_for_multiple_complaint">View Multiple Complaints Status</string>
    <string name="lbl_complaint_status">Complaint Status</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_customer_ref">Customer Ref.</string>
    <string name="lbl_site_location">Site / Location</string>
    <string name="re_assign_to_cc">Re-Assign to CCC</string>
    <string name="lbl_worktype">WorkType</string>
    <string name="lbl_ppm_details">PPM Details</string>
    <string name="lbl_location_floor_flat">Location (Floor/Flat ,etc)</string>
    <string name="lbl_rc_search">Search by Complaint No.</string>
    <string name="lbl_s_no">S.No</string>
    <string name="lbl_request_no">Request No.</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_location_barcode">Location Barcode</string>
    <string name="building_zone_floor_flat_sub_location">Building/Zone Floor/Flat/Sub location</string>
    <string name="asset_name">Asset Name</string>
    <string name="proposed_start_date">Proposed Start Date</string>
    <string name="proposed_end_date">Proposed End Date</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
</resources>