<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="3dp"

    card_view:cardUseCompatPadding="true">

    <LinearLayout
        style="@style/match_parent_style"
        android:id="@+id/linear_main"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/match_wrap_style"
            android:layout_weight=".9"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_ccc"
                style="@style/checkbox_view"
                android:checked="false" />

            <TextView
                android:id="@+id/tv_complaint_no"
                style="@style/checkbox_label"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/lbl_complaint_no"
                android:textSize="@dimen/_7sdp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_date"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_date"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_work_type"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_worktype"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_priority"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_priority"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_site_location"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_site_location"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_complaint_details"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_complaint_details"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_status"
            android:textSize="@dimen/_7sdp" />

        <TextView
            android:id="@+id/tv_customer_ref"
            style="@style/textview_label"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/lbl_customer_ref"
            android:textSize="@dimen/_7sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>