<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/match_wrap_style"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_title"
        style="@style/match_wrap_style"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_rc_search"
            style="@style/edit_searchview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:iconifiedByDefault="false"
            android:visibility="gone"
            app:defaultQueryHint="@string/lbl_rc_search" />

        <LinearLayout
            android:id="@+id/ll_receivecomplaint_title"
            style="@style/match_wrap_style"
            android:layout_below="@+id/sv_rc_search"
            android:background="@color/color_gray"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/match_wrap_style"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_checkall"
                    style="@style/checkbox_white"
                    android:checked="false"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_s_no"
                    style="@style/btn_wrap_content_gray"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_s_no" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_building"
                style="@style/btn_wrap_content_gray"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_building" />

            <TextView
                android:id="@+id/tv_location_floor_flat"
                style="@style/btn_wrap_content_gray"
                android:layout_weight=".9"
                android:gravity="center"
                android:text="@string/lbl_location_floor_flat" />

            <TextView
                android:id="@+id/tv_location_barcode"
                style="@style/btn_wrap_content_gray"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_location_barcode" />

            <TextView
                android:id="@+id/tv_start_date"
                style="@style/btn_wrap_content_gray"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_start_date" />

            <TextView
                android:id="@+id/tv_end_date"
                style="@style/btn_wrap_content_gray"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_end_date" />

            <TextView
                android:id="@+id/tv_ppm_details"
                style="@style/btn_wrap_content_gray"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lbl_ppm_details" />
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/match_wrap_style"
        android:layout_below="@+id/ll_title"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/match_parent_style"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                style="@style/match_parent_style"
                android:layout_marginBottom="@dimen/_110sdp" />

            <include layout="@layout/view_list_empty" />

            <include layout="@layout/view_error_retry" />

            <include layout="@layout/view_loading_message" />

            <include layout="@layout/footer" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_reassign_ccc"
        style="@style/btn_wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:text="@string/re_assign_to_cc" />
</RelativeLayout>